# ai-office-simulator

./: Dockerfile  README.md  api.py  app.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
